--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light custom-bg-color">
-  <a class="navbar-brand custom-stroke" routerLink="">MarketPlace ComicBook</a>
+  <a class="navbar-brand custom-stroke" routerLink="/comicList">MarketPlace ComicBook</a>
   <button class="navbar-toggler  " type="button" (click)="toggleMenu()">
     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0,0,256,256">
       <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M3,9c-0.36064,-0.0051 -0.69608,0.18438 -0.87789,0.49587c-0.18181,0.3115 -0.18181,0.69676 0,1.00825c0.18181,0.3115 0.51725,0.50097 0.87789,0.49587h44c0.36064,0.0051 0.69608,-0.18438 0.87789,-0.49587c0.18181,-0.3115 0.18181,-0.69676 0,-1.00825c-0.18181,-0.3115 -0.51725,-0.50097 -0.87789,-0.49587zM3,24c-0.36064,-0.0051 -0.69608,0.18438 -0.87789,0.49587c-0.18181,0.3115 -0.18181,0.69676 0,1.00825c0.18181,0.3115 0.51725,0.50097 0.87789,0.49587h44c0.36064,0.0051 0.69608,-0.18438 0.87789,-0.49587c0.18181,-0.3115 0.18181,-0.69676 0,-1.00825c-0.18181,-0.3115 -0.51725,-0.50097 -0.87789,-0.49587zM3,39c-0.36064,-0.0051 -0.69608,0.18438 -0.87789,0.49587c-0.18181,0.3115 -0.18181,0.69676 0,1.00825c0.18181,0.3115 0.51725,0.50097 0.87789,0.49587h44c0.36064,0.0051 0.69608,-0.18438 0.87789,-0.49587c0.18181,-0.3115 0.18181,-0.69676 0,-1.00825c-0.18181,-0.3115 -0.51725,-0.50097 -0.87789,-0.49587z"></path></g></g>
@@ -12,7 +12,7 @@
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
     </div>
     <div class="icons d-none d-sm-none d-none d-md-block">
-      <img src="/assets/cart.png" alt="cart">
+      <img src="/assets/cart.png" alt="cart" routerLink="/cart">
       <img src="/assets/user.png" alt="user">
       <span>{{ getLoggedInUsername() }}</span> 
     </div>
