--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -3,7 +3,7 @@
   <div class="row">
       <div class="col-md-12">
             <h1>Registro</h1>
-          <form [formGroup]="registrationForm">
+          <form [formGroup]="registrationForm" class="row">
               <div class="form-group">
                   <input  type="email" id="email" class="form-control" formControlName="email" required placeholder="Correo Electrónico" [(ngModel)]="newCustomer.email">
                   <div *ngIf="registrationForm.get('email')?.hasError('required') && registrationForm.get('email')?.touched" class="text-light">
@@ -14,13 +14,13 @@
                   </div>
                 </div>
                 <div class="form-row">
-                  <div class="form-group col-md-6">
+                  <div class="form-group">
                     <select id="dniType" class="form-control" formControlName="dniType" required [(ngModel)]="selectedDniType">
-                      <option [value]="'DNI'">DNI <i class="bi bi-chevron-down"></i></option>
+                      <option [value]="'DNI'" class="dni">DNI</option>
                       <option [value]="'NIE'">NIE</option>
                     </select>
                   </div>
-                  <div class="form-group col-md-6">
+                  <div class="form-group">
                       <input type="text" id="dniNumber" class="form-control" formControlName="dni" required placeholder="Nº" [(ngModel)]="newCustomer.dni">
                 </div>
               </div>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="form-group-surname">
-              <input type="text" id="surname1" class="form-control" formControlName="surname" required placeholder="Apellido 1">
+              <input type="text" id="surname1" class="form-control" formControlName="surname" required placeholder="Primer apellido">
               <div class="text-light" *ngIf="registrationForm.get('surname')?.hasError('required') && registrationForm.get('surname')?.touched">
                 El apellido es obligatorio.
               </div>
@@ -42,40 +42,40 @@
                 Ingresa un apellido válido.
               </div>
           <div class="form-group">
-              <input type="text" id="surname2" class="form-control" formControlName="surname2" required placeholder="Apellido 2">
+              <input type="text" id="surname2" class="form-control" formControlName="surname2" required placeholder="Segundo apellido">
           </div>
         </div>
-        <div class="form-group-adress">
+          <div class="col-12">
           <input type="text" id="street" class="form-control" formControlName="street" placeholder="Calle">
-      <div class="form-row-inline">
-          <div class="form-group col-md-2">
-              <input type="text" id="number" class="form-control small-input" formControlName="number" placeholder="Nº">
+        </div>
+          <div class="col-6">
+              <input type="text" id="number" class=" form-control" formControlName="number" placeholder="Nº">
           </div>
-          <div class="form-group col-md-2">
-              <input type="text" id="gate" class="form-control small-input" formControlName="gate"placeholder="Portal">
+          <div class="col-6">
+              <input type="text" id="gate" class="form-control" formControlName="gate"placeholder="Portal">
           </div>
-          <div class="form-group col-md-2">
-              <input type="text" id="stairs" class="form-control small-input" formControlName="stairs" placeholder="Escalera">
+          <div class="col-4">
+              <input type="text" id="stairs" class="form-control" formControlName="stairs" placeholder="Escalera">
           </div>
-          <div class="form-group col-md-2">
-              <input type="text" id="floor" class="form-control small-input" formControlName="floor" placeholder="Piso">
+          <div class="col-4">
+              <input type="text" id="floor" class="form-control" formControlName="floor" placeholder="Piso">
           </div>
-          <div class="form-group col-md-2">
-              <input type="text" id="letter" class="form-control small-input" formControlName="letter" placeholder="Letra">
+          <div class="col-4">
+              <input type="text" id="letter" class="form-control" formControlName="letter" placeholder="Letra">
           </div>
-      </div>
+ 
       <div class="form-row">
-          <div class="form-group col-md-6">
-              <input type="text" id="postalcode" class="form-control small-input" formControlName="postalcode" required placeholder="Código Postal">
+          <div class="form-group ">
+              <input type="text" id="postalcode" class="form-control" formControlName="postalcode" required placeholder="Código Postal">
           </div>
-          <div class="form-group col-md-6">
-              <input type="text" id="town" class="form-control small-input" formControlName="town" required placeholder="Municipio">
+          <div class="form-group ">
+              <input type="text" id="town" class="form-control " formControlName="town" required placeholder="Municipio">
           </div>
-          <div class="form-group col-md-6">
-            <input type="text" id="province" class="form-control small-input" formControlName="province" required placeholder="Provincia">
+          <div class="form-group ">
+            <input type="text" id="province" class="form-control s" formControlName="province" required placeholder="Provincia">
         </div>
       </div>
-    </div>
+   
     <div class="form-group">
       <input type="password" id="password" class="form-control" formControlName="password" required placeholder="Contraseña" [(ngModel)]="newCustomer.password">
       <div *ngIf="registrationForm.get('password')?.hasError('required') && registrationForm.get('password')?.touched" class="text-light">
@@ -95,7 +95,7 @@
     <p>Registro</p>
   </button>
   <div class="login">
-    <p>¿Ya tienes una cuenta? <strong routerLink="">Accede</strong></p>
+    <p><u>¿Ya tienes una cuenta? <strong routerLink="/login">Accede</strong></u> </p>
   </div>
 </form>
 </div>
