--- a/front/src/app/components/login/login.component.scss
+++ b/front/src/app/components/login/login.component.scss
@@ -1,3 +1,6 @@
+body{
+    height:100% !important;
+}
 .container{
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr;
@@ -6,6 +9,8 @@
     width: 80%;
     margin-top: 2%;
     margin-bottom: -2%;
+    padding-bottom:10%;
+    border: 8px solid black;
     
 }
 .card{
