--- a/front/src/app/components/register-a/register-a.component.html
+++ b/front/src/app/components/register-a/register-a.component.html
@@ -91,7 +91,7 @@
         Las contraseñas no coinciden.
       </div>
   </div>
-  <button type="submit" class="btn btn-primary" (click)="registerCustomer()" [disabled]="!registrationForm.valid">
+  <button type="submit" class="btn btn-primary" (click)="registerCustomer()">
     <p>Registro</p>
   </button>
   <div class="login">
