--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,5 @@
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-client-details></app-client-details>
 <app-footer></app-footer>
 
